[package]
name = "doksnet"
version = "0.1.0"
edition = "2024"
authors = ["Fedor Tkachenko <vzdbovich@gmail.com>"]
description = "A CLI tool for documentation-code mapping verification"
license = "MIT"

[[bin]]
name = "doksnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
blake3 = "1.5"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
walkdir = "2.4"
uuid = { version = "1.10", features = ["v4"] }
