[package]
name = "doksnet"
version = "1.1.2"
edition = "2021"
authors = ["Fedor Tkachenko <vzdbovich@gmail.com>"]
description = "A CLI tool for documentation-code mapping verification using cryptographic hashes"
license = "MIT"
repository = "https://github.com/Pulko/doksnet"
homepage = "https://github.com/Pulko/doksnet"
documentation = "https://docs.rs/doksnet"
readme = "README.md"
keywords = ["documentation", "verification", "cli", "mapping", "hash"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "doksnet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
blake3 = "1.5"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
walkdir = "2.4"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
